<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="natec.androidapp.mycalc.ui.calculator.pads.SpecialPadFragment">

    <Button
        android:id="@+id/btn_x_power_neg_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="0.5dp"
        android:insetTop="0.5dp"
        android:insetRight="0dp"
        android:insetBottom="0.5dp"
        android:text="@string/pow_neg_one"
        app:cornerRadius="-100dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_pi"
        app:layout_constraintEnd_toStartOf="@+id/btn_special_equals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="25"
        app:layout_constraintStart_toEndOf="@+id/btn_2_power_x"
        app:layout_constraintTop_toBottomOf="@+id/btn_x_power_y"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="16.67" />

    <Button
        android:id="@+id/btn_square_root"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="0dp"
        android:insetTop="0.5dp"
        android:insetRight="0.5dp"
        android:insetBottom="0.5dp"
        android:text="@string/root"
        app:cornerRadius="-100dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_nothing"
        app:layout_constraintEnd_toStartOf="@+id/btn_factorial"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_10_power_x"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="16.67" />

    <Button
        android:id="@+id/btn_x_power_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="0dp"
        android:insetTop="0.5dp"
        android:insetRight="0.5dp"
        android:insetBottom="0.5dp"
        android:text="@string/pow_3"
        app:cornerRadius="-100dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_10_power_x"
        app:layout_constraintEnd_toStartOf="@+id/btn_x_power_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_e"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="16.67" />

    <Button
        android:id="@+id/btn_factorial"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="0dp"
        android:insetTop="0.5dp"
        android:insetRight="0.5dp"
        android:insetBottom="0dp"
        android:text="@string/factorial"
        app:cornerRadius="-100dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_nothing"
        app:layout_constraintEnd_toStartOf="@+id/btn_pi"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="25"
        app:layout_constraintStart_toEndOf="@+id/btn_square_root"
        app:layout_constraintTop_toBottomOf="@+id/btn_2_power_x"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="16.67" />

    <Button
        android:id="@+id/btn_10_power_x"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="0dp"
        android:insetTop="0.5dp"
        android:insetRight="0.5dp"
        android:insetBottom="0.5dp"
        android:text="@string/_10_x"
        app:cornerRadius="-100dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_square_root"
        app:layout_constraintEnd_toStartOf="@+id/btn_2_power_x"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_x_power_3"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="16.67" />

    <Button
        android:id="@+id/btn_2_power_x"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="0.5dp"
        android:insetTop="0.5dp"
        android:insetRight="0.5dp"
        android:insetBottom="0.5dp"
        android:text="@string/_2_x"
        app:cornerRadius="-100dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_factorial"
        app:layout_constraintEnd_toStartOf="@+id/btn_x_power_neg_one"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="25"
        app:layout_constraintStart_toEndOf="@+id/btn_10_power_x"
        app:layout_constraintTop_toBottomOf="@+id/btn_x_power_2"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="16.67" />

    <Button
        android:id="@+id/btn_special_rad_deg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="0.5dp"
        android:insetTop="0.5dp"
        android:insetRight="0dp"
        android:insetBottom="0.5dp"
        android:text="@string/Rad"
        app:cornerRadius="-100dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_x_power_y"
        app:layout_constraintEnd_toStartOf="@+id/btn_special_equals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="25"
        app:layout_constraintStart_toEndOf="@+id/btn_e_power_x"
        app:layout_constraintTop_toBottomOf="@+id/btn_special_to_trig"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="16.67" />

    <Button
        android:id="@+id/btn_e"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-medium"
        android:insetLeft="0dp"
        android:insetTop="0.5dp"
        android:insetRight="0.5dp"
        android:insetBottom="0.5dp"
        android:text="@string/e"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:cornerRadius="-100dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_x_power_3"
        app:layout_constraintEnd_toStartOf="@+id/btn_e_power_x"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_special_to_main"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="16.67" />

    <Button
        android:id="@+id/btn_pi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="0.5dp"
        android:insetTop="0.5dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/pi"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:cornerRadius="-100dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_nothing"
        app:layout_constraintEnd_toStartOf="@+id/btn_special_equals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="25"
        app:layout_constraintStart_toEndOf="@+id/btn_factorial"
        app:layout_constraintTop_toBottomOf="@+id/btn_x_power_neg_one"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="16.67" />

    <Button
        android:id="@+id/btn_e_power_x"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="0.5dp"
        android:insetTop="0.5dp"
        android:insetRight="0.5dp"
        android:insetBottom="0.5dp"
        android:text="@string/e_x"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:cornerRadius="-100dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_x_power_2"
        app:layout_constraintEnd_toStartOf="@+id/btn_special_rad_deg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="25"
        app:layout_constraintStart_toEndOf="@+id/btn_e"
        app:layout_constraintTop_toBottomOf="@+id/btn_special_to_trig"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="16.67" />

    <Button
        android:id="@+id/btn_x_power_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="0.5dp"
        android:insetTop="0.5dp"
        android:insetRight="0.5dp"
        android:insetBottom="0.5dp"
        android:text="@string/x_2"
        app:cornerRadius="-100dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_2_power_x"
        app:layout_constraintEnd_toStartOf="@+id/btn_x_power_y"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="25"
        app:layout_constraintStart_toEndOf="@+id/btn_x_power_3"
        app:layout_constraintTop_toBottomOf="@+id/btn_e_power_x"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="16.67" />

    <Button
        android:id="@+id/btn_x_power_y"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="0.5dp"
        android:insetTop="0.5dp"
        android:insetRight="0dp"
        android:insetBottom="0.5dp"
        android:text="@string/x_y"
        app:cornerRadius="-100dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_x_power_neg_one"
        app:layout_constraintEnd_toStartOf="@+id/btn_special_equals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="25"
        app:layout_constraintStart_toEndOf="@+id/btn_x_power_2"
        app:layout_constraintTop_toBottomOf="@+id/btn_special_rad_deg"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="16.67" />

    <Button
        android:id="@+id/btn_special_delete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="0.5dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0.5dp"
        android:text="@string/delete"
        app:cornerRadius="-100dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_special_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="25"
        app:layout_constraintStart_toEndOf="@+id/btn_special_to_trig"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="16.67" />

    <Button
        android:id="@+id/btn_special_to_trig"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="0.5dp"
        android:insetTop="0dp"
        android:insetRight="0.5dp"
        android:insetBottom="0.5dp"
        android:text="@string/trig_log"
        app:cornerRadius="-100dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_special_rad_deg"
        app:layout_constraintEnd_toStartOf="@+id/btn_special_delete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="37.5"
        app:layout_constraintStart_toEndOf="@+id/btn_special_to_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="16.67" />

    <Button
        android:id="@+id/btn_special_to_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0.5dp"
        android:insetBottom="0.5dp"
        android:text="@string/main"
        app:cornerRadius="-100dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_e"
        app:layout_constraintEnd_toStartOf="@+id/btn_special_to_trig"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="37.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="16.67" />

    <Button
        android:id="@+id/btn_special_equals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="0.5dp"
        android:insetTop="0.5dp"
        android:insetBottom="0dp"
        android:text="@string/equals"
        app:cornerRadius="-100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="25"
        app:layout_constraintStart_toEndOf="@+id/btn_special_rad_deg"
        app:layout_constraintTop_toBottomOf="@+id/btn_special_delete"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="83.33" />

    <Button
        android:id="@+id/btn_nothing"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:insetTop="0.5dp"
        android:insetRight="0.5dp"
        android:insetBottom="0dp"
        app:cornerRadius="-100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_pi"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_square_root"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="16.67" />

</androidx.constraintlayout.widget.ConstraintLayout>